saves/test/demo_full_20240802_193545/fsm3comb/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp fsm3comb_tb.v fsm3comb.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
fsm3comb_tb.v:72: $finish called at 8000 (1ps)

iverilog cmd 2 error:

